Test/dafny0/snapshots/Inputs/Snapshots3.v0.dfy
method M()
{
  if (*)
  {
    
  }
  else
  {
    assert 0 != 0;  // error
  }
}
